--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -30,6 +30,14 @@
     <string name="playpause">Hrát / Pauza</string>
     <string name="next">Následující</string>
 
+    <!-- Blocked numbers -->
+    <string name="manage_blocked_numbers">Spravovat blokovaná čísla</string>
+    <string name="not_blocking_anyone">Neblokujete nikoho.</string>
+    <string name="add_a_blocked_number">Přidat blokované číslo</string>
+    <string name="block_number">Blokovat číslo</string>
+    <string name="block_numbers">Blokovat čísla</string>
+    <string name="blocked_numbers">Blokovaná čísla</string>
+
     <!-- Favorites -->
     <string name="favorites">Oblíbené</string>
     <string name="add_favorites">Přidat oblíbené</string>
