--- a/commons/src/main/res/values-cy/strings.xml
+++ b/commons/src/main/res/values-cy/strings.xml
@@ -30,6 +30,14 @@
     <string name="playpause">Play / Pause</string>
     <string name="next">Next</string>
 
+    <!-- Blocked numbers -->
+    <string name="manage_blocked_numbers">Rheoli rhifau wedi\'u rhwystro</string>
+    <string name="not_blocking_anyone">Nid wyt yn rhwystro unrhyw un.</string>
+    <string name="add_a_blocked_number">Ychwanegu rif i\'w rwystro</string>
+    <string name="block_number">Rhwystro rhif</string>
+    <string name="block_numbers">Rhwystro rhifau</string>
+    <string name="blocked_numbers">Rhifau wedi\'u rhwystro</string>
+
     <!-- Favorites -->
     <string name="favorites">Ffefrynnau</string>
     <string name="add_favorites">Ychwanegu ffefryn</string>
