--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -30,6 +30,14 @@
     <string name="playpause">Αναπαραγωγή / Παύση</string>
     <string name="next">Επόμενο</string>
 
+    <!-- Blocked numbers -->
+    <string name="manage_blocked_numbers">Διαχείριση αποκλεισμένων αριθμών</string>
+    <string name="not_blocking_anyone">Χωρίς αποκλεισμο κανενός.</string>
+    <string name="add_a_blocked_number">Προσθήκη ένος αποκλεισμένου αριθμού</string>
+    <string name="block_number">Αποκλεισμό αριθμού</string>
+    <string name="block_numbers">Αποκλεισμό αριθμών</string>
+    <string name="blocked_numbers">Αποκλεισμένοι αριθμοί</string>
+
     <!-- Favorites -->
     <string name="favorites">Αγαπημένα</string>
     <string name="add_favorites">Προσθήκη αγαπημένων</string>
