--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -30,6 +30,14 @@
     <string name="playpause">Reproducir / Pausar</string>
     <string name="next">Siguiente</string>
 
+    <!-- Blocked numbers -->
+    <string name="manage_blocked_numbers">Administrar números bloqueados</string>
+    <string name="not_blocking_anyone">Aún no has bloqueado a nadie.</string>
+    <string name="add_a_blocked_number">Añadir un número bloqueado</string>
+    <string name="block_number">Bloquear número</string>
+    <string name="block_numbers">Bloquear números</string>
+    <string name="blocked_numbers">Números bloqueados</string>
+
     <!-- Favorites -->
     <string name="favorites">Favoritos</string>
     <string name="add_favorites">Agregar a favoritos</string>
