--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -30,6 +30,14 @@
     <string name="playpause">Reproduciraj / Pauziraj</string>
     <string name="next">Sljedeća</string>
 
+    <!-- Blocked numbers -->
+    <string name="manage_blocked_numbers">Upravljanje blokiranim brojevima</string>
+    <string name="not_blocking_anyone">Ne blokirate nikoga.</string>
+    <string name="add_a_blocked_number">Dodaj blokirani broj</string>
+    <string name="block_number">Blokiraj broj</string>
+    <string name="block_numbers">Blokiraj brojeve</string>
+    <string name="blocked_numbers">Blokirani brojevi</string>
+
     <!-- Favorites -->
     <string name="favorites">Favoriti</string>
     <string name="add_favorites">Dodaj favorite</string>
