--- a/commons/src/main/res/values-in/strings.xml
+++ b/commons/src/main/res/values-in/strings.xml
@@ -30,6 +30,14 @@
     <string name="playpause">Putar / Jeda</string>
     <string name="next">Berikutnya</string>
 
+    <!-- Blocked numbers -->
+    <string name="manage_blocked_numbers">Kelola nomor yang diblokir</string>
+    <string name="not_blocking_anyone">Anda tidak memblokir siapapun.</string>
+    <string name="add_a_blocked_number">Tambahkan nomor yang diblokir</string>
+    <string name="block_number">Blokir nomor</string>
+    <string name="block_numbers">Blokir nomor</string>
+    <string name="blocked_numbers">Nomor yang diblokir</string>
+
     <!-- Favorites -->
     <string name="favorites">Favorit</string>
     <string name="add_favorites">Tambah favorit</string>
