--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -30,6 +30,14 @@
     <string name="playpause">Riproduci / Pausa</string>
     <string name="next">Successiva</string>
 
+    <!-- Blocked numbers -->
+    <string name="manage_blocked_numbers">Gestisci i numeri bloccati</string>
+    <string name="not_blocking_anyone">Nessun numero bloccato.</string>
+    <string name="add_a_blocked_number">Aggiungi un numero da bloccare</string>
+    <string name="block_number">Blocca numero</string>
+    <string name="block_numbers">Blocca numeri</string>
+    <string name="blocked_numbers">Numeri bloccati</string>
+
     <!-- Favorites -->
     <string name="favorites">Preferiti</string>
     <string name="add_favorites">Aggiungi preferiti</string>
