--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -30,6 +30,14 @@
     <string name="playpause">再生 / 一時停止</string>
     <string name="next">次へ</string>
 
+    <!-- Blocked numbers -->
+    <string name="manage_blocked_numbers">ブロックした番号を管理</string>
+    <string name="not_blocking_anyone">まだ誰もブロックしていません.</string>
+    <string name="add_a_blocked_number">ブロックする番号を追加</string>
+    <string name="block_number">Block number</string>
+    <string name="block_numbers">Block numbers</string>
+    <string name="blocked_numbers">Blocked numbers</string>
+
     <!-- Favorites -->
     <string name="favorites">お気に入り</string>
     <string name="add_favorites">お気に入りを追加</string>
