--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -30,6 +30,14 @@
     <string name="playpause">Afspelen / Pauzeren</string>
     <string name="next">Volgende</string>
 
+    <!-- Blocked numbers -->
+    <string name="manage_blocked_numbers">Geblokkeerde nummers beheren</string>
+    <string name="not_blocking_anyone">Geen geblokkeerde nummers.</string>
+    <string name="add_a_blocked_number">Geblokkeerd nummer toevoegen</string>
+    <string name="block_number">Nummer blokkeren</string>
+    <string name="block_numbers">Nummers blokkeren</string>
+    <string name="blocked_numbers">Geblokkeerde nummers</string>
+
     <!-- Favorites -->
     <string name="favorites">Favorieten</string>
     <string name="add_favorites">Favorieten toevoegen</string>
