--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -30,6 +30,14 @@
     <string name="playpause">Odtwórz / zatrzymaj</string>
     <string name="next">Następny</string>
 
+    <!-- Blocked numbers -->
+    <string name="manage_blocked_numbers">Zarządzaj zablokowanymi numerami</string>
+    <string name="not_blocking_anyone">Nie blokujesz nikogo.</string>
+    <string name="add_a_blocked_number">Dodaj numer do blokowania</string>
+    <string name="block_number">Zablokuj numer</string>
+    <string name="block_numbers">Zablokuj numery</string>
+    <string name="blocked_numbers">Zablokowane numery</string>
+
     <!-- Favorites -->
     <string name="favorites">Ulubione</string>
     <string name="add_favorites">Dodaj ulubione</string>
