--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -30,6 +30,14 @@
     <string name="playpause">Воспроизведение / Пауза</string>
     <string name="next">Следующая</string>
 
+    <!-- Blocked numbers -->
+    <string name="manage_blocked_numbers">Управление блокируемыми номерами</string>
+    <string name="not_blocking_anyone">Нет блокируемых номеров</string>
+    <string name="add_a_blocked_number">Добавить блокируемый номер</string>
+    <string name="block_number">Блокируемый номер</string>
+    <string name="block_numbers">Блокируемые номера</string>
+    <string name="blocked_numbers">Заблокированные номера</string>
+
     <!-- Favorites -->
     <string name="favorites">Избранное</string>
     <string name="add_favorites">Добавить избранное</string>
