--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -30,6 +30,14 @@
     <string name="playpause">Hrať / Pauznúť</string>
     <string name="next">Nasledujúca</string>
 
+    <!-- Blocked numbers -->
+    <string name="manage_blocked_numbers">Spravovať blokované čísla</string>
+    <string name="not_blocking_anyone">Neblokujete nikoho.</string>
+    <string name="add_a_blocked_number">Pridať blokované číslo</string>
+    <string name="block_number">Blokovať číslo</string>
+    <string name="block_numbers">Blokovať čísla</string>
+    <string name="blocked_numbers">Blokované čísla</string>
+
     <!-- Favorites -->
     <string name="favorites">Obľúbené</string>
     <string name="add_favorites">Pridať obľúbené</string>
