--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -30,6 +30,14 @@
     <string name="playpause">播放 / 暫停</string>
     <string name="next">下一首</string>
 
+    <!-- Blocked numbers -->
+    <string name="manage_blocked_numbers">管理黑名單</string>
+    <string name="not_blocking_anyone">你沒有封鎖任何人</string>
+    <string name="add_a_blocked_number">添加封鎖的號碼</string>
+    <string name="block_number">封鎖號碼</string>
+    <string name="block_numbers">封鎖號碼</string>
+    <string name="blocked_numbers">黑名單</string>
+
     <!-- Favorites -->
     <string name="favorites">我的最愛</string>
     <string name="add_favorites">添加我的最愛</string>
