--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -29,6 +29,7 @@
     <string name="previous">Προηγούμενο</string>
     <string name="playpause">Αναπαραγωγή / Παύση</string>
     <string name="next">Επόμενο</string>
+    <string name="number">Αριθμός</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Διαχείριση αποκλεισμένων αριθμών</string>
@@ -37,6 +38,8 @@
     <string name="block_number">Αποκλεισμό αριθμού</string>
     <string name="block_numbers">Αποκλεισμό αριθμών</string>
     <string name="blocked_numbers">Αποκλεισμένοι αριθμοί</string>
+    <string name="must_make_default_dialer">Θα πρέπει να οριστεί προεπιλεγμένη εφαρμογή για χρήση αποκλεισμένων αριθμών.</string>
+    <string name="set_as_default">Ορισμός ως προεπιλογής</string>
 
     <!-- Favorites -->
     <string name="favorites">Αγαπημένα</string>
