--- a/commons/src/main/res/values-az/strings.xml
+++ b/commons/src/main/res/values-az/strings.xml
@@ -29,6 +29,7 @@
     <string name="previous">Əvvəlki</string>
     <string name="playpause">Oynat / Dayan</string>
     <string name="next">Sonrakı</string>
+    <string name="number">Nömrə</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Manage blocked numbers</string>
@@ -37,6 +38,8 @@
     <string name="block_number">Block number</string>
     <string name="block_numbers">Block numbers</string>
     <string name="blocked_numbers">Blocked numbers</string>
+    <string name="must_make_default_dialer">You have to make this app the default dialer app to make use of blocked numbers.</string>
+    <string name="set_as_default">Set as default</string>
 
     <!-- Favorites -->
     <string name="favorites">Sevimlilər</string>
