--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -29,6 +29,7 @@
     <string name="previous">Previous</string>
     <string name="playpause">Play / Pause</string>
     <string name="next">Next</string>
+    <string name="number">Nummer</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Administrér blokerede numre</string>
@@ -37,6 +38,8 @@
     <string name="block_number">Blokér nummer</string>
     <string name="block_numbers">Blokér numre</string>
     <string name="blocked_numbers">Blokerede numre</string>
+    <string name="must_make_default_dialer">Du skal gøre denne app til standardopkaldsappen for at gøre brug af blokerede numre.</string>
+    <string name="set_as_default">Gør til standard</string>
 
     <!-- Favorites -->
     <string name="favorites">Bogmærker</string>
