--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -29,6 +29,7 @@
     <string name="previous">Vorheriger Titel</string>
     <string name="playpause">Wiedergabe / Pause</string>
     <string name="next">Nächster Titel</string>
+    <string name="number">Nummer</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Blockierte Nummern verwalten</string>
@@ -37,6 +38,8 @@
     <string name="block_number">Nummer blockieren</string>
     <string name="block_numbers">Nummern blockieren</string>
     <string name="blocked_numbers">Blockierte Nummern</string>
+    <string name="must_make_default_dialer">Du musst diese App als Standardtelefonie-App einstellen, um Nummern blockieren zu können.</string>
+    <string name="set_as_default">Als Standard auswählen</string>
 
     <!-- Favorites -->
     <string name="favorites">Favoriten</string>
