--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -29,6 +29,7 @@
     <string name="previous">Précédent</string>
     <string name="playpause">Lecture / Pause</string>
     <string name="next">Suivant</string>
+    <string name="number">Numéro</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Manage blocked numbers</string>
@@ -37,6 +38,8 @@
     <string name="block_number">Numéro bloquer</string>
     <string name="block_numbers">Numéros bloquer</string>
     <string name="blocked_numbers">Numéros bloquer</string>
+    <string name="must_make_default_dialer">You have to make this app the default dialer app to make use of blocked numbers.</string>
+    <string name="set_as_default">Set as default</string>
 
     <!-- Favorites -->
     <string name="favorites">Favoris</string>
