--- a/commons/src/main/res/values-in/strings.xml
+++ b/commons/src/main/res/values-in/strings.xml
@@ -29,6 +29,7 @@
     <string name="previous">Sebelumnya</string>
     <string name="playpause">Putar / Jeda</string>
     <string name="next">Berikutnya</string>
+    <string name="number">Nomor</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Kelola nomor yang diblokir</string>
@@ -37,6 +38,8 @@
     <string name="block_number">Blokir nomor</string>
     <string name="block_numbers">Blokir nomor</string>
     <string name="blocked_numbers">Nomor yang diblokir</string>
+    <string name="must_make_default_dialer">Anda harus mengatur aplikasi ini sebagai aplikasi dialer default untuk menggunakan fitur pemblokir nomor.</string>
+    <string name="set_as_default">Tetapkan sebagai default</string>
 
     <!-- Favorites -->
     <string name="favorites">Favorit</string>
