--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -29,6 +29,7 @@
     <string name="previous">Precedente</string>
     <string name="playpause">Riproduci / Pausa</string>
     <string name="next">Successiva</string>
+    <string name="number">Numero</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Gestisci i numeri bloccati</string>
@@ -37,6 +38,8 @@
     <string name="block_number">Blocca numero</string>
     <string name="block_numbers">Blocca numeri</string>
     <string name="blocked_numbers">Numeri bloccati</string>
+    <string name="must_make_default_dialer">È necessario impostare quest\'app come predefinita per utilizzare i numeri bloccati.</string>
+    <string name="set_as_default">Imposta come predefinita</string>
 
     <!-- Favorites -->
     <string name="favorites">Preferiti</string>
