--- a/commons/src/main/res/values-pt-rBR/strings.xml
+++ b/commons/src/main/res/values-pt-rBR/strings.xml
@@ -29,6 +29,7 @@
     <string name="previous">Previous</string>
     <string name="playpause">Play / Pause</string>
     <string name="next">Next</string>
+    <string name="number">Número</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Gerenciar números bloqueados</string>
@@ -37,6 +38,8 @@
     <string name="block_number">Bloquear número</string>
     <string name="block_numbers">Bloquear números</string>
     <string name="blocked_numbers">Números bloqueados</string>
+    <string name="must_make_default_dialer">Você precisa tornar este aplicativo padrão para poder bloquear números.</string>
+    <string name="set_as_default">Definir como padrão</string>
 
     <!-- Favorites -->
     <string name="favorites">Favoritos</string>
