--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -29,6 +29,7 @@
     <string name="previous">Предыдущая</string>
     <string name="playpause">Воспроизведение / Пауза</string>
     <string name="next">Следующая</string>
+    <string name="number">Номер</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Управление блокируемыми номерами</string>
@@ -37,6 +38,8 @@
     <string name="block_number">Блокируемый номер</string>
     <string name="block_numbers">Блокируемые номера</string>
     <string name="blocked_numbers">Заблокированные номера</string>
+    <string name="must_make_default_dialer">Вы должны сделать \"Simple Contacts\" приложением по умолчанию для набора номера, чтобы использовать блокировку номеров.</string>
+    <string name="set_as_default">Установить по умолчанию</string>
 
     <!-- Favorites -->
     <string name="favorites">Избранное</string>
