adding a new string for blocking confirmation

--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -40,6 +40,7 @@
     <string name="blocked_numbers">Blokovaná čísla</string>
     <string name="must_make_default_dialer">Pro použití blokování čísel musíte nastavit aplikaci jako výchozí pro správu hovorů.</string>
     <string name="set_as_default">Nastavit jako výchozí</string>
+    <string name="block_confirmation">Ste si istý, že chcete zablokovat \"%s\"?</string>
 
     <!-- Favorites -->
     <string name="favorites">Oblíbené</string>
