--- a/commons/src/main/res/values-cy/strings.xml
+++ b/commons/src/main/res/values-cy/strings.xml
@@ -40,6 +40,7 @@
     <string name="blocked_numbers">Rhifau wedi\'u rhwystro</string>
     <string name="must_make_default_dialer">Rhaid gwneud yr ap hwn yr ap deialu rhagosodedig er mwyn defnyddio rhifau wedi\'u rhwystro.</string>
     <string name="set_as_default">Defnyddio fel y rhagosodedig</string>
+    <string name="block_confirmation">Are you sure you want to block \"%s\"?</string>
 
     <!-- Favorites -->
     <string name="favorites">Ffefrynnau</string>
