--- a/commons/src/main/res/values-fi/strings.xml
+++ b/commons/src/main/res/values-fi/strings.xml
@@ -40,6 +40,7 @@
     <string name="blocked_numbers">Estetyt numerot</string>
     <string name="must_make_default_dialer">Soittajan täytyy olla oletus</string>
     <string name="set_as_default">Aseta oletukseksi</string>
+    <string name="block_confirmation">Are you sure you want to block \"%s\"?</string>
 
     <!-- Favorites -->
     <string name="favorites">Favorites</string>
