--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -40,6 +40,7 @@
     <string name="blocked_numbers">Blokované čísla</string>
     <string name="must_make_default_dialer">Pre použitie blokovania čísel musíte nastaviť aplikáciu ako predvolenú pre správu hovorov.</string>
     <string name="set_as_default">Nastaviť ako predvolenú</string>
+    <string name="block_confirmation">Ste si istý, že chcete zablokovať \"%s\"?</string>
 
     <!-- Favorites -->
     <string name="favorites">Obľúbené</string>
