--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -40,7 +40,7 @@
     <string name="blocked_numbers">Αποκλεισμένοι αριθμοί</string>
     <string name="must_make_default_dialer">Θα πρέπει να οριστεί προεπιλεγμένη εφαρμογή για χρήση αποκλεισμένων αριθμών.</string>
     <string name="set_as_default">Ορισμός ως προεπιλογής</string>
-    <string name="block_confirmation">Are you sure you want to block \"%s\"?</string>
+    <string name="block_confirmation">Σίγουρα να αποκλειστεί ο \"%s\"?</string>
 
     <!-- Favorites -->
     <string name="favorites">Αγαπημένα</string>
