escaping an apostrophe

--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -701,7 +701,7 @@
     <string name="filters_title">Android Photo Filters (filtres d\'image)</string>
     <string name="gesture_views_title">Gesture Views (zoom d\'images)</string>
     <string name="indicator_fast_scroll_title">Indicator Fast Scroll (lettre sur barre de défilement)</string>
-    <string name="event_bus_title">Event Bus (communication au sein de l'application.)</string>
+    <string name="event_bus_title">Event Bus (communication au sein de l\'application.)</string>
     <string name="audio_record_view_title">Audio Record View (audio visualisation)</string>
 
     <!-- Google Play listing -->
