adding the SMS MMS library license

--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -702,6 +702,7 @@
     <string name="indicator_fast_scroll_title">Indicator Fast Scroll (lettere su barre di scorrimento)</string>
     <string name="event_bus_title">Event Bus (comunicazione all\'interno dell\'app)</string>
     <string name="audio_record_view_title">Audio Record View (visualizzazione audio)</string>
+    <string name="sms_mms_title">SMS MMS (MMS handling)</string>
 
     <!-- Google Play listing -->
     <string name="deprecated_app">DEPRECATA: Questa versione dell\'app non è più supportata, ottieni la versione Pro a https://play.google.com/store/apps/details?id=com.simplemobiletools.xxx.pro</string>
