--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -703,6 +703,7 @@
     <string name="indicator_fast_scroll_title">Indicator Fast Scroll (lettre sur barre de défilement)</string>
     <string name="event_bus_title">Event Bus (communication au sein de l\'application.)</string>
     <string name="audio_record_view_title">Audio Record View (audio visualisation)</string>
+    <string name="sms_mms_title">SMS MMS (MMS handling)</string>
 
     <!-- Google Play listing -->
     <string name="deprecated_app">ATTENTION : cette version de l\'application n\'est plus maintenue. Procurez-vous la version Pro à l\'adresse https://play.google.com/store/apps/details?id=com.simplemobiletools.xxx.pro</string>
